[package]
name = "videoproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "*"
tokio = "*"
tracing-subscriber = { version = "*", features = ["json"]}
anyhow = "*"
clap = {version="*",features=["derive"]}
tracing = "*"
secrecy = "*"
serde_json = "*"
hyper = { version = "*", features = ["server","http1","runtime"]}
lazy_static = "*"
base64 = "*"